--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fade-in">
+  <nav class="position-sticky top-0 navbar navbar-expand-lg navbar-dark bg-dark fade-in">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">TechFest 2025</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon menu-icon"></span>
       </button>
       <div id="navbarNavMenu" class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
