--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     </div>
   </nav>
 
-  <div class="offcanvas offcanvas-start custom-offcanvas-width" tabindex="-1" id="navbarNav" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas offcanvas-start custom-offcanvas-width" tabindex="-1" id="navbarNav"
+    aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
       <h1>TechFest 2026</h1>
-      <button type="button" class="btn btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <button type="button" class="btn btn-close btn-close-white" data-bs-dismiss="offcanvas"
+        aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
       <div class="mymenu">
